Fix all the compile warnings and detekt issues
Signed-off-by: bowenlan-amzn <bowenlan23@gmail.com>